# vk_raytracing_tutorial_KHR

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING  LICENSE.md  README.md  log_vk_ray_tracing_ao_KHR.txt  utilities.cmake
common/: obj_loader.cpp  obj_loader.h
docs/: NV_to_KHR.md.htm  NV_to_KHR.md.html  README.md  index.html  setup.md  setup.md.html  vkrt_tuto_animation.md.htm  vkrt_tuto_animation.md.html  vkrt_tuto_anyhit.md.htm  vkrt_tuto_anyhit.md.html  vkrt_tuto_callable.md.html  vkrt_tuto_further.md.html  vkrt_tuto_indirect_scissor.md.htm  vkrt_tuto_indirect_scissor.md.html  vkrt_tuto_instances.md.htm  vkrt_tuto_instances.md.html  vkrt_tuto_intersection.md.html  vkrt_tuto_jitter_cam.md.htm  vkrt_tuto_jitter_cam.md.html  vkrt_tuto_manyhits.md.htm  vkrt_tuto_manyhits.md.html  vkrt_tuto_rayquery.md.htm  vkrt_tuto_rayquery.md.html  vkrt_tuto_reflection.md.htm  vkrt_tuto_reflection.md.html  vkrt_tutorial.css  vkrt_tutorial.md.htm  vkrt_tutorial.md.html
media/scenes/: Medieval_building.mtl  cornellBox.gltf  cube.mtl  cube_multi.mtl  plane.mtl  sphere.mtl  sponza_even_smaller.mtl  wuson.mtl
photon_beam/: README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
photon_beam/shaders/: frag_shader.frag  host_device.h  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  photonbeam.rchit  photonbeam.rgen  photonbeam.rmiss  raycommon.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace.rmiss  raytrace_surface.rahit  raytrace_surface.rint  sampling.glsl
ray_tracing__advance/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp  obj.hpp  offscreen.cpp  offscreen.hpp  raytrace.cpp  raytrace.hpp  vkalloc.hpp
ray_tracing__advance/shaders/: frag_shader.frag  host_device.h  light_inf.rcall  light_point.rcall  light_spot.rcall  random.glsl  raycommon.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace.rmiss  raytrace2.rahit  raytrace2.rchit  vert_shader.vert
ray_tracing__before/: CMakeLists.txt  Cell.cpp  Cell.h  CellHash.cpp  CellHash.h  CudaCheck.h  CudaMathOperators.h  Grid.cpp  Grid.h  GridPoint.cpp  GridPoint.h  Particle.h  README.md  SPHCuda.cu  SPHCuda.cuh  SPHCuda.h  SPHFluid.cpp  SPHFluid.h  VulkanRender.cpp  VulkanRender.h  hello_vulkan.cpp  hello_vulkan.h  main.cpp  simConfig.json  utils.cpp  utils.h
ray_tracing__before/shaders/: frag_shader.frag  host_device.h  post.frag  random.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytrace_0.rahit  raytrace_1.rahit  raytrace_rahit.glsl
ray_tracing__simple/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing__simple/shaders/: post.frag  raytrace.rchit  raytrace.rgen  raytraceShadow.rmiss  shader.rchit.hlsl
ray_tracing_advanced_compilation/: README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_advanced_compilation/shaders/: frag_shader.frag  post.frag  raycommon.glsl  raytrace.rchit  raytrace.rgen
ray_tracing_animation/: README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_animation/shaders/: anim.comp  frag_shader.frag  host_device.h  raytrace.rchit
ray_tracing_anyhit/: README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_anyhit/shaders/: raycommon.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytraceShadow.rmiss  raytrace_0.rahit  raytrace_1.rahit  raytrace_rahit.glsl
ray_tracing_ao/: CMakeLists.txt  README.md  SH_HashTester.cpp  SH_HashTester.h  SH_includes.h  hello_vulkan.cpp  hello_vulkan.h  main.cpp  spatial_hashing.cpp  spatial_hashing.h
ray_tracing_ao/shaders/: SH_ao.comp  SH_filtering.comp  SH_hash_tools.glsl  SH_post.frag  ao.comp  frag_shader.frag  host_device.h  post.frag  raycommon.glsl  wavefront.glsl
ray_tracing_callable/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_callable/shaders/: frag_shader.frag  host_device.h  light_inf.rcall  light_point.rcall  light_spot.rcall  passthrough.vert  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  vert_shader.vert
ray_tracing_gltf/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_gltf/shaders/: binding.glsl  frag_shader.frag  gltf.glsl  host_device.h  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytraceShadow.rmiss  sampling.glsl  vert_shader.vert
ray_tracing_indirect/: CMakeLists.txt
ray_tracing_indirect_scissor/: README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_indirect_scissor/shaders/: LanternIndirectEntry.glsl  frag_shader.frag  host_device.h  lantern.rchit  lanternIndirect.comp  lanternShadow.rmiss  lanternShadowLantern.rchit  lanternShadowObj.rchit  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  wavefront.glsl
ray_tracing_instances/: README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_instances/shaders/: frag_shader.frag  passthrough.vert  raycommon.glsl  raytrace.rmiss
ray_tracing_intersection/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_intersection/shaders/: host_device.h  passthrough.vert  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace2.rchit  raytraceShadow.rmiss  wavefront.glsl
ray_tracing_jitter_cam/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_jitter_cam/shaders/: host_device.h  passthrough.vert  random.glsl  raytrace.rchit  raytrace.rgen  vert_shader.vert
ray_tracing_manyhits/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_manyhits/shaders/: frag_shader.frag  raytrace.rchit  raytrace.rgen  raytrace2.rchit  vert_shader.vert  wavefront.glsl
ray_tracing_motionblur/: README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_rayquery/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_reflections/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_specialization/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
(+14 files in other folders)
